--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -208,194 +208,40 @@ html {
 }
 
 
-.padding-top-xs {
-  padding-top: 20px;
+.padding-top-true {
+  padding-top: 60px;
 
   // MD
   @media (min-width: 768px) {
-    padding-top: 20px;
+    padding-top: 60px;
   }
 
   // LG
   @media (min-width: 1200px) {
-    padding-top: 20px;
+    padding-top: 60px;
   }
 
   // XL
   @media (min-width: 1352px) {
-    padding-top: 20px;
+    padding-top: 60px;
   }
 }
 
-.padding-bottom-xs {
-  padding-bottom: 20px;
+.padding-bottom-true {
+  padding-bottom: 60px;
 
   // MD
   @media (min-width: 768px) {
-    padding-bottom: 20px;
+    padding-bottom: 60px;
   }
 
   // LG
   @media (min-width: 1200px) {
-    padding-bottom: 20px;
+    padding-bottom: 60px;
   }
 
   // XL
   @media (min-width: 1352px) {
-    padding-bottom: 20px;
-  }
-}
-
-.padding-top-s {
-  padding-top: 30px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-top: 30px;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-top: 30px;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-top: 30px;
-  }
-}
-
-.padding-bottom-s {
-  padding-bottom: 30px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-bottom: 30px;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-bottom: 30px;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-bottom: 30px;
-  }
-}
-
-.padding-top-m {
-  padding-top: 50px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-top: 50px;
-    ;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-top: 50px;
-    ;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-top: 50px;
-  }
-}
-
-.padding-bottom-m {
-  padding-bottom: 50px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-bottom: 50px;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-bottom: 50px;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-bottom: 50px;
-  }
-}
-
-.padding-top-l {
-  padding-top: 80px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-top: 80px;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-top: 80px;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-top: 80px;
-  }
-}
-
-.padding-bottom-l {
-  padding-bottom: 80px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-bottom: 80px;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-bottom: 80px;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-bottom: 80px;
-  }
-}
-
-.padding-top-xl {
-  padding-top: 80px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-top: 80px;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-top: 100px;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-top: 100px;
-  }
-}
-
-.padding-bottom-xl {
-  padding-bottom: 80px;
-
-  // MD
-  @media (min-width: 768px) {
-    padding-bottom: 80px;
-  }
-
-  // LG
-  @media (min-width: 1200px) {
-    padding-bottom: 100px;
-  }
-
-  // XL
-  @media (min-width: 1352px) {
-    padding-bottom: 100px;
+    padding-bottom: 60px;
   }
 }
