--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -872,6 +872,9 @@ video {
 .h-screen {
   height: 100vh;
 }
+.max-h-\[500px\] {
+  max-height: 500px;
+}
 .max-h-\[600px\] {
   max-height: 600px;
 }
@@ -1694,6 +1697,10 @@ video {
 
   .md\:h-\[480px\] {
     height: 480px;
+  }
+
+  .md\:max-h-\[unset\] {
+    max-height: unset;
   }
 
   .md\:w-\[130px\] {
