--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -618,6 +618,15 @@ video {
 .top-\[143px\] {
   top: 143px;
 }
+.bottom-\[00px\] {
+  bottom: 00px;
+}
+.bottom-\[0px\] {
+  bottom: 0px;
+}
+.bottom-\[1px\] {
+  bottom: 1px;
+}
 .z-50 {
   z-index: 50;
 }
@@ -632,6 +641,9 @@ video {
 }
 .z-\[999\] {
   z-index: 999;
+}
+.z-\[1\] {
+  z-index: 1;
 }
 .order-1 {
   order: 1;
@@ -744,6 +756,12 @@ video {
 }
 .mt-\[8px\] {
   margin-top: 8px;
+}
+.mr-\[100px\] {
+  margin-right: 100px;
+}
+.mr-\[110px\] {
+  margin-right: 110px;
 }
 .block {
   display: block;
@@ -878,6 +896,24 @@ video {
 .h-screen {
   height: 100vh;
 }
+.h-\[600px\] {
+  height: 600px;
+}
+.h-\[400px\] {
+  height: 400px;
+}
+.h-\[270px\] {
+  height: 270px;
+}
+.h-\[100px\] {
+  height: 100px;
+}
+.h-\[390px\] {
+  height: 390px;
+}
+.h-\[370px\] {
+  height: 370px;
+}
 .max-h-\[500px\] {
   max-height: 500px;
 }
@@ -980,6 +1016,12 @@ video {
 }
 .w-screen {
   width: 100vw;
+}
+.w-\[510px\] {
+  width: 510px;
+}
+.w-\[320px\] {
+  width: 320px;
 }
 .min-w-full {
   min-width: 100%;
@@ -1261,6 +1303,12 @@ video {
 .p-\[15px\] {
   padding: 15px;
 }
+.p-\[25px\] {
+  padding: 25px;
+}
+.p-\[30px\] {
+  padding: 30px;
+}
 .px-2 {
   padding-left: 20px;
   padding-right: 20px;
@@ -1339,6 +1387,9 @@ video {
 .pt-\[80px\] {
   padding-top: 80px;
 }
+.pb-\[60px\] {
+  padding-bottom: 60px;
+}
 .text-center {
   text-align: center;
 }
@@ -1395,6 +1446,9 @@ video {
 }
 .text-\[42px\] {
   font-size: 42px;
+}
+.text-40 {
+  font-size: 40px;
 }
 .font-bold {
   font-weight: 700;
@@ -1506,6 +1560,9 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-\[22\] {
+  color: 22;
 }
 .underline {
   text-decoration-line: underline;
@@ -1632,6 +1689,14 @@ video {
     top: 0;
   }
 
+  .md\:z-\[1\] {
+    z-index: 1;
+  }
+
+  .md\:z-\[2\] {
+    z-index: 2;
+  }
+
   .md\:order-1 {
     order: 1;
   }
@@ -1700,6 +1765,10 @@ video {
     margin-top: unset;
   }
 
+  .md\:mr-\[unset\] {
+    margin-right: unset;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1730,6 +1799,14 @@ video {
 
   .md\:h-\[480px\] {
     height: 480px;
+  }
+
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:h-\[270px\] {
+    height: 270px;
   }
 
   .md\:max-h-\[unset\] {
@@ -1796,6 +1873,14 @@ video {
     width: calc(100% - 25px);
   }
 
+  .md\:w-\[745px\] {
+    width: 745px;
+  }
+
+  .md\:w-\[320px\] {
+    width: 320px;
+  }
+
   .md\:max-w-\[300px\] {
     max-width: 300px;
   }
@@ -1840,6 +1925,10 @@ video {
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:gap-\[20px\] {
