--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -751,6 +751,9 @@ video {
 .mt-\[8px\] {
   margin-top: 8px;
 }
+.mt-\[120px\] {
+  margin-top: 120px;
+}
 .block {
   display: block;
 }
@@ -892,6 +895,69 @@ video {
 }
 .h-screen {
   height: 100vh;
+}
+.h-\[913px\] {
+  height: 913px;
+}
+.h-\[507px\] {
+  height: 507px;
+}
+.h-\[45\%\] {
+  height: 45%;
+}
+.h-\[auto\] {
+  height: auto;
+}
+.h-\[50\%\] {
+  height: 50%;
+}
+.h-\[356px\] {
+  height: 356px;
+}
+.h-\[200px\] {
+  height: 200px;
+}
+.h-\[130px\] {
+  height: 130px;
+}
+.h-\[148px\] {
+  height: 148px;
+}
+.h-\[155px\] {
+  height: 155px;
+}
+.h-\[222px\] {
+  height: 222px;
+}
+.h-\[101px\] {
+  height: 101px;
+}
+.h-\[221px\] {
+  height: 221px;
+}
+.h-\[122px\] {
+  height: 122px;
+}
+.h-\[330px\] {
+  height: 330px;
+}
+.h-\[136px\] {
+  height: 136px;
+}
+.h-\[205px\] {
+  height: 205px;
+}
+.h-\[266px\] {
+  height: 266px;
+}
+.h-\[102px\] {
+  height: 102px;
+}
+.h-\[111px\] {
+  height: 111px;
+}
+.h-\[515px\] {
+  height: 515px;
 }
 .max-h-\[500px\] {
   max-height: 500px;
@@ -1779,6 +1845,18 @@ video {
     height: 100%;
   }
 
+  .md\:h-\[515px\] {
+    height: 515px;
+  }
+
+  .md\:h-\[300px\] {
+    height: 300px;
+  }
+
+  .md\:h-\[200px\] {
+    height: 200px;
+  }
+
   .md\:max-h-\[unset\] {
     max-height: unset;
   }
@@ -2078,6 +2156,78 @@ video {
     height: 90px;
   }
 
+  .lg\:h-\[825px\] {
+    height: 825px;
+  }
+
+  .lg\:h-\[313px\] {
+    height: 313px;
+  }
+
+  .lg\:h-\[233px\] {
+    height: 233px;
+  }
+
+  .lg\:h-\[204px\] {
+    height: 204px;
+  }
+
+  .lg\:h-\[232px\] {
+    height: 232px;
+  }
+
+  .lg\:h-\[234px\] {
+    height: 234px;
+  }
+
+  .lg\:h-\[249px\] {
+    height: 249px;
+  }
+
+  .lg\:h-\[157px\] {
+    height: 157px;
+  }
+
+  .lg\:h-\[349px\] {
+    height: 349px;
+  }
+
+  .lg\:h-\[158px\] {
+    height: 158px;
+  }
+
+  .lg\:h-\[345px\] {
+    height: 345px;
+  }
+
+  .lg\:h-\[190px\] {
+    height: 190px;
+  }
+
+  .lg\:h-\[213px\] {
+    height: 213px;
+  }
+
+  .lg\:h-\[172px\] {
+    height: 172px;
+  }
+
+  .lg\:h-\[417px\] {
+    height: 417px;
+  }
+
+  .lg\:h-\[214px\] {
+    height: 214px;
+  }
+
+  .lg\:h-\[159px\] {
+    height: 159px;
+  }
+
+  .lg\:h-\[160px\] {
+    height: 160px;
+  }
+
   .lg\:w-\[115px\] {
     width: 115px;
   }
@@ -2338,6 +2488,62 @@ video {
 
   .xl\:h-\[52px\] {
     height: 52px;
+  }
+
+  .xl\:h-\[913px\] {
+    height: 913px;
+  }
+
+  .xl\:h-\[356px\] {
+    height: 356px;
+  }
+
+  .xl\:h-\[233px\] {
+    height: 233px;
+  }
+
+  .xl\:h-\[264px\] {
+    height: 264px;
+  }
+
+  .xl\:h-\[278px\] {
+    height: 278px;
+  }
+
+  .xl\:h-\[297px\] {
+    height: 297px;
+  }
+
+  .xl\:h-\[397px\] {
+    height: 397px;
+  }
+
+  .xl\:h-\[178px\] {
+    height: 178px;
+  }
+
+  .xl\:h-\[395px\] {
+    height: 395px;
+  }
+
+  .xl\:h-\[218px\] {
+    height: 218px;
+  }
+
+  .xl\:h-\[241px\] {
+    height: 241px;
+  }
+
+  .xl\:h-\[198px\] {
+    height: 198px;
+  }
+
+  .xl\:h-\[475px\] {
+    height: 475px;
+  }
+
+  .xl\:h-\[181px\] {
+    height: 181px;
   }
 
   .xl\:w-\[125px\] {
