--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -673,6 +673,9 @@ video {
   margin-top: 35px;
   margin-bottom: 35px;
 }
+.mb-2 {
+  margin-bottom: 20px;
+}
 .mb-\[15px\] {
   margin-bottom: 15px;
 }
@@ -1318,6 +1321,9 @@ video {
 .p-\[15px\] {
   padding: 15px;
 }
+.p-\[25px\] {
+  padding: 25px;
+}
 .p-\[30px\] {
   padding: 30px;
 }
@@ -1341,6 +1347,10 @@ video {
   padding-left: 35px;
   padding-right: 35px;
 }
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
+}
 .py-5 {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -1359,6 +1369,9 @@ video {
 }
 .pb-3 {
   padding-bottom: 30px;
+}
+.pb-\[15px\] {
+  padding-bottom: 15px;
 }
 .pb-\[20px\] {
   padding-bottom: 20px;
@@ -1389,6 +1402,9 @@ video {
 }
 .pt-\[0px\] {
   padding-top: 0px;
+}
+.pt-\[15px\] {
+  padding-top: 15px;
 }
 .pt-\[30px\] {
   padding-top: 30px;
@@ -1936,6 +1952,10 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:items-center {
     align-items: center;
   }
@@ -1961,6 +1981,15 @@ video {
   .md\:rounded-r-\[10px\] {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+  }
+
+  .md\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .md\:p-4 {
+    padding: 40px;
   }
 
   .md\:p-\[20px\] {
