--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -582,6 +582,9 @@ video {
 .bottom-\[117px\] {
   bottom: 117px;
 }
+.bottom-\[17px\] {
+  bottom: 17px;
+}
 .bottom-\[1px\] {
   bottom: 1px;
 }
@@ -602,6 +605,9 @@ video {
 }
 .right-\[20px\] {
   right: 20px;
+}
+.right-\[4px\] {
+  right: 4px;
 }
 .right-\[70px\] {
   right: 70px;
@@ -693,6 +699,9 @@ video {
 }
 .mb-\[60px\] {
   margin-bottom: 60px;
+}
+.mb-\[80px\] {
+  margin-bottom: 80px;
 }
 .ml-\[10px\] {
   margin-left: 10px;
@@ -826,6 +835,9 @@ video {
 .h-\[148px\] {
   height: 148px;
 }
+.h-\[14px\] {
+  height: 14px;
+}
 .h-\[155px\] {
   height: 155px;
 }
@@ -885,9 +897,6 @@ video {
 }
 .h-\[47px\] {
   height: 47px;
-}
-.h-\[500px\] {
-  height: 500px;
 }
 .h-\[50px\] {
   height: 50px;
@@ -968,6 +977,9 @@ video {
 .w-\[11px\] {
   width: 11px;
 }
+.w-\[14px\] {
+  width: 14px;
+}
 .w-\[155px\] {
   width: 155px;
 }
@@ -979,6 +991,9 @@ video {
 }
 .w-\[228px\] {
   width: 228px;
+}
+.w-\[297px\] {
+  width: 297px;
 }
 .w-\[30px\] {
   width: 30px;
@@ -1038,6 +1053,10 @@ video {
 .w-full {
   width: 100%;
 }
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
 .w-screen {
   width: 100vw;
 }
@@ -1061,6 +1080,9 @@ video {
 }
 .max-w-\[523px\] {
   max-width: 523px;
+}
+.max-w-\[900px\] {
+  max-width: 900px;
 }
 .rotate-\[180deg\] {
   --tw-rotate: 180deg;
@@ -1135,6 +1157,11 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(20px * var(--tw-space-x-reverse));
   margin-left: calc(20px * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(30px * var(--tw-space-x-reverse));
+  margin-left: calc(30px * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1334,6 +1361,10 @@ video {
   padding-left: 20px;
   padding-right: 20px;
 }
+.px-4 {
+  padding-left: 40px;
+  padding-right: 40px;
+}
 .px-\[15px\] {
   padding-left: 15px;
   padding-right: 15px;
@@ -1393,6 +1424,9 @@ video {
 }
 .pb-\[60px\] {
   padding-bottom: 60px;
+}
+.pb-\[70px\] {
+  padding-bottom: 70px;
 }
 .pb-\[85px\] {
   padding-bottom: 85px;
@@ -1478,6 +1512,9 @@ video {
 .text-40 {
   font-size: 40px;
 }
+.text-8 {
+  font-size: 8px;
+}
 .text-\[42px\] {
   font-size: 42px;
 }
@@ -1504,6 +1541,9 @@ video {
 }
 .leading-12 {
   line-height: 12px;
+}
+.leading-13 {
+  line-height: 13px;
 }
 .leading-15 {
   line-height: 15px;
@@ -1594,6 +1634,9 @@ video {
 }
 .underline {
   text-decoration-line: underline;
+}
+.opacity-80 {
+  opacity: 0.8;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -1873,6 +1916,10 @@ video {
     width: 447px;
   }
 
+  .md\:w-\[450px\] {
+    width: 450px;
+  }
+
   .md\:w-\[47px\] {
     width: 47px;
   }
@@ -1891,6 +1938,10 @@ video {
 
   .md\:w-\[600px\] {
     width: 600px;
+  }
+
+  .md\:w-\[686px\] {
+    width: 686px;
   }
 
   .md\:w-\[745px\] {
@@ -2025,6 +2076,10 @@ video {
 
   .md\:pb-\[50px\] {
     padding-bottom: 50px;
+  }
+
+  .md\:pt-\[10px\] {
+    padding-top: 10px;
   }
 
   .md\:pt-\[unset\] {
@@ -2249,6 +2304,10 @@ video {
     width: 515px;
   }
 
+  .lg\:w-\[680px\] {
+    width: 680px;
+  }
+
   .lg\:w-\[800px\] {
     width: 800px;
   }
@@ -2370,8 +2429,16 @@ video {
     padding-bottom: 80px;
   }
 
+  .lg\:pb-\[90px\] {
+    padding-bottom: 90px;
+  }
+
   .lg\:pt-0 {
     padding-top: 0;
+  }
+
+  .lg\:pt-\[60px\] {
+    padding-top: 60px;
   }
 
   .lg\:pt-\[unset\] {
@@ -2567,6 +2634,10 @@ video {
     width: 63px;
   }
 
+  .xl\:w-\[715px\] {
+    width: 715px;
+  }
+
   .xl\:w-\[90px\] {
     width: 90px;
   }
@@ -2620,8 +2691,16 @@ video {
     padding-right: unset;
   }
 
+  .xl\:pb-\[100px\] {
+    padding-bottom: 100px;
+  }
+
   .xl\:pb-\[105px\] {
     padding-bottom: 105px;
+  }
+
+  .xl\:pt-\[70px\] {
+    padding-top: 70px;
   }
 
   .xl\:text-15 {
