--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -661,13 +661,13 @@ button.update-cart {
     }
 }
 
-.woocommerce-message::before {
-    display: none !important;
-}
+// .woocommerce-message::before {
+//     display: none !important;
+// }
 
-.woocommerce-error::before {
-    display: none !important;
-}
+// .woocommerce-error::before {
+//     display: none !important;
+// }
 
 
 .custom-checkout {
