--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -390,9 +390,9 @@ button.update-cart {
         }
     }
 
-    .woocommerce-error {
-        display: none !important;
-    }
+    // .woocommerce-error {
+    //     display: none !important;
+    // }
 
     * {
         font-family: Plus Jakarta Sans, sans-serif;
