--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -1087,6 +1087,9 @@ video {
 .max-w-\[900px\] {
   max-width: 900px;
 }
+.max-w-\[130px\] {
+  max-width: 130px;
+}
 .rotate-\[180deg\] {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
