--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -847,6 +847,9 @@ video {
 .h-\[15px\] {
   height: 15px;
 }
+.h-\[180px\] {
+  height: 180px;
+}
 .h-\[18px\] {
   height: 18px;
 }
@@ -980,6 +983,9 @@ video {
 .w-\[11px\] {
   width: 11px;
 }
+.w-\[130px\] {
+  width: 130px;
+}
 .w-\[14px\] {
   width: 14px;
 }
@@ -1046,6 +1052,9 @@ video {
 .w-\[calc\(100\%-30px\)\] {
   width: calc(100% - 30px);
 }
+.w-\[calc\(100vw-40px\)\] {
+  width: calc(100vw - 40px);
+}
 .w-auto {
   width: auto;
 }
@@ -1065,6 +1074,9 @@ video {
 }
 .min-w-full {
   min-width: 100%;
+}
+.max-w-\[150px\] {
+  max-width: 150px;
 }
 .max-w-\[300px\] {
   max-width: 300px;
@@ -1087,9 +1099,6 @@ video {
 .max-w-\[900px\] {
   max-width: 900px;
 }
-.max-w-\[130px\] {
-  max-width: 130px;
-}
 .rotate-\[180deg\] {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1111,6 +1120,9 @@ video {
 }
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
